Design: 주문/반품/취소페이지 css 수정

--- a/src/main/resources/static/user/main/css/main.css
+++ b/src/main/resources/static/user/main/css/main.css
@@ -173,10 +173,10 @@
 	font-size: 16px;
 	color: #666666;
 	font-weight: 500;
-	margin-bottom: 5px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	line-height: 1.5;
 }
 
 .book-author {
