--- a/src/main/resources/static/user/mypage/purchase_cancel/css/cancelCompletion.css
+++ b/src/main/resources/static/user/mypage/purchase_cancel/css/cancelCompletion.css
@@ -15,7 +15,6 @@
 
 .request-date {
 	padding-left: 30px;
-	font-size: 16px;
 	font-weight: bold;
 	font-size: 16px;
 	color: #000000;
@@ -23,7 +22,7 @@
 
 .request-date > span {
 	border-right: 1px solid #C0C0C0;
-    margin-right: 15px;
+    margin-right: 20px;
     padding-right: 20px;
 }
 
@@ -51,8 +50,7 @@
 .book-info {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-	height: 47px;
+    gap: 10px;
 	margin-left: 20px;
 	margin-right: auto;
 }
@@ -110,7 +108,7 @@
 
 .refund-info-area {
 	display: flex;
-	padding: 30px 20px;
+	padding: 30px 40px;
 	font-size: 16px;
 	font-weight: 600;
 	color: #000000;
@@ -130,6 +128,10 @@
 	display: flex;
     justify-content: space-between;
     padding-left: 30px;
+}
+
+.cancel-price .won {
+	font-weight: 400;
 }
 
 .refund-guide-area {
