--- a/src/main/resources/static/user/mypage/purchase_cancel/css/returnRequest.css
+++ b/src/main/resources/static/user/mypage/purchase_cancel/css/returnRequest.css
@@ -22,13 +22,14 @@
 }
 
 .request-date>span {
-	border-right: 1px solid #C0C0C0;
-	padding-right: 10px;
+    border-right: 1px solid #C0C0C0;
+    margin-right: 20px;
+    padding-right: 20px;
 }
 
 .request-order-num>span {
-	padding-left: 10px;
 	color: #000000;
+	font-weight: 300;
 }
 
 .page-sub-title {
@@ -53,8 +54,8 @@
 .book-info {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
-	height: 87px;
+	gap: 10px;
+	margin-left: 5px;
 	margin-right: auto;
 }
 
@@ -207,7 +208,7 @@
 
 .refund-info-area {
 	display: flex;
-	padding: 30px 20px;
+	padding: 30px 40px;
 	font-size: 16px;
 	font-weight: 600;
 	color: #000000;
@@ -227,6 +228,14 @@
 	display: flex;
 	justify-content: space-between;
 	padding-left: 30px;
+}
+
+.cancel-price {
+	display: flex;
+}
+
+.cancel-price .won {
+	font-weight: 400;
 }
 
 .refund-guide-area {
