--- a/src/main/resources/templates/user/mypage/customer_order/cancelCompletion.html
+++ b/src/main/resources/templates/user/mypage/customer_order/cancelCompletion.html
@@ -38,7 +38,7 @@
 					</div>
 				</div>
 				<div>
-					<span class="book-price" th:text="${#numbers.formatInteger(detail.order_detail_price * detail.request_complete_qty, 0, 'COMMA')} + '원'"></span>
+					<span class="book-price" th:text="${#numbers.formatInteger(detail.order_detail_price * detail.request_complete_qty, 0, 'COMMA')}"></span><span>원</span>
 				</div>	
 				<div>
 					<span class="order_status" th:text="${detail.request_status}"></span>
@@ -65,7 +65,7 @@
 					</div>
 				</div>
 				<div>
-					<span class="book-price" th:text="${#numbers.formatInteger(detail.order_detail_price * detail.request_complete_qty, 0, 'COMMA')} + '원'"></span>
+					<span class="book-price" th:text="${#numbers.formatInteger(detail.order_detail_price * detail.request_complete_qty, 0, 'COMMA')}"></span><span>원</span>
 				</div>	
 				<div>
 					<span class="order_status" th:text="${detail.request_status}"></span>
@@ -81,11 +81,15 @@
 		<div class="refund-info-area">
 			<div class="refund-price-area">
 				<span>취소금액</span>
-				<span th:text="${#numbers.formatInteger(refund.cancellationAmount, 0, 'COMMA')} + '원'"></span>
+				<div class="cancel-price">
+					<span th:text="${#numbers.formatInteger(refund.cancellationAmount, 0, 'COMMA')}"></span><span class="won">원</span>
+				</div>
 			</div>
 			<div class="cancel-price-area">
 				<span>환불금액</span>
-				<span th:text="${#numbers.formatInteger(refund.refundAmount, 0, 'COMMA') + '원'}"></span>				
+				<div class="cancel-price">
+					<span th:text="${#numbers.formatInteger(refund.refundAmount, 0, 'COMMA')}"></span><span class="won">원</span>
+				</div>
 			</div>
 		</div>	
 	</div>
