--- a/src/main/resources/static/admin/managers/css/managerReg.css
+++ b/src/main/resources/static/admin/managers/css/managerReg.css
@@ -1,66 +1,43 @@
 /* 공통 스타일 */
-input, select {
+input {
 	width:270px;
-    margin-left: 50px;
-}
-
-label {
-    margin-left: 80px;
-}
-
-.input-file-label{
-	margin-left: 50px;
 }
 
 .info {
     display: flex;
+    align-items: center;
+    gap: 50px;
     border-bottom: 1px solid #D8D8D8;
     margin-bottom: 15px;
     padding-bottom: 10px;
-    align-items: center; /* 자식 요소들을 수직 중앙 정렬 */
-    position: relative;
 }
 
 .search-list-title:first-child {
     margin-bottom: 30px;
 }
 
-.select-box {
-    display: flex;
-    align-items: center; /* 자식 요소들을 수직 중앙 정렬 */
-    position: relative;  /* 필요 시 position relative 사용 */
-}
+/*#emailDomain + .select-arrow-down {*/
+/*    margin-left: 30px; !* 선택 상자와 화살표 사이에 간격 추가 *!*/
+/*}*/
 
-#emailDomain + .select-arrow-down {
-    margin-left: 30px; /* 선택 상자와 화살표 사이에 간격 추가 */
-}
-
-#manager_dept + .select-arrow-down {
-	margin-left: 30px;
-}
+/*#manager_dept + .select-arrow-down {*/
+/*	margin-left: 30px;*/
+/*}*/
 
 /* 특정 요소 스타일 */
-select#emailUser, select#deptName, select#emailDomain {
+select#emailUser, select#deptName {
     width: 150px;
     margin-left: 20px;
 }
 
-select#countryNum {
+.select-wrap.countryNum {
     width: 80px;
-}
-
-.input-file-label {
-    margin-right: 30px;
 }
 
 .btn {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.search-list-subject-symbol, input#userPart1.num.gray-text, input#userPart2.num.gray-text {
-    margin-left: 20px;
 }
 
 span.search-list-subject {
@@ -83,8 +60,8 @@ select#deptName{
 	width: 80px;
 }
 
-.dept-select {
-	width: 110px;
+.select-wrap.dept-select {
+	width: 120px;
 }
 
 .overlap{
@@ -96,7 +73,6 @@ select#deptName{
 }
 
 .id-reference, .pw-reference {
-	margin-left: 50px;
     margin-top: 5px; /* input 요소와 간격을 줄 수 있습니다 */
     font-size: 12px; /* 글자 크기 조정 */
     color: #666666; /* 글자 색상 조정 */
@@ -104,4 +80,15 @@ select#deptName{
 
 .pointer-cursor {
     cursor: pointer;
+}
+
+.emailUser-wrap, .countryNum-wrap {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.addr-wrap, .pw-wrap {
+    border-bottom: 0;
+    margin-bottom: 0;
 }
