--- a/src/main/resources/templates/admin/managers/managers.html
+++ b/src/main/resources/templates/admin/managers/managers.html
@@ -69,9 +69,8 @@
 						<option value="01">물류팀</option>
 						<option value="02">운영팀</option>
 						<option value="03">인사팀</option>
-						
 					</select>
-					<div class="select-arrow-down column"></div>
+					<div class="select-arrow-down"></div>
 				</div>
 				<button id="change-button" class="default-btn cancel">변경</button>
 				<button id="commit-button" class="default-btn"
