--- a/src/main/resources/static/admin/inquiries/css/inquiriesDetails.css
+++ b/src/main/resources/static/admin/inquiries/css/inquiriesDetails.css
@@ -8,11 +8,13 @@ textarea {
     display: block;
     resize: none;
     font-size: 16px;
+    background-color: #f8f8f8;
 }
 
 textarea:focus {
     border: 1px solid #666666; /* 포커스 시에도 기본 보더 유지 */
     outline: none; /* 포커스 시 아웃라인 제거 */
+    background-color: #fff;
 }
 
 .answer-area {
