--- a/src/main/resources/static/admin/managers/css/managerDetails.css
+++ b/src/main/resources/static/admin/managers/css/managerDetails.css
@@ -1,28 +1,29 @@
-/* 공통 스타일 */
-span.search-list-subject {
-	width: 200px;
-}
-
 span.search-list-subject.value {
 	width: 400px;
-}
-
-span.search-list-subject-symbol {
-	margin-right: 8px;
-	margin-left: 8px;
-}
-input, select {
-	width:270px;
-    margin-left: 50px;
 }
 
 .info {
     height: 60px;
     display: flex;
     align-items: center; /* 자식 요소들을 수직 중앙 정렬 */
+    gap: 60px;
     border-bottom: 1px solid #D8D8D8;
     padding-left: 50px;
     position: relative;
+}
+
+.info.addr-info {
+    height: 90px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 20px;
+}
+
+.addr {
+    display: flex;
+    align-items: center;
+    gap: 60px;
 }
 
 .info.profile {
@@ -43,4 +44,21 @@ input, select {
     font-size: 12px;
     color: #666666;
     margin-bottom: 5px;
+}
+
+.img-input-wrap {
+    background-color: #EBECF0;
+    border: 1px solid #7E7E7E;
+    border-radius: 5px;
+    text-align: center;
+    line-height: 100px;
+    font-size: 24px;
+    color: #666;
+    overflow: hidden;
+}
+
+.img-input-wrap img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
