--- a/src/main/resources/static/admin/myinfo/css/myinfo.css
+++ b/src/main/resources/static/admin/myinfo/css/myinfo.css
@@ -1,22 +1,10 @@
 /* 공통 스타일 */
-input, select {
-	margin-left: 50px;
-}
-
 input:focus, select:focus {
 	border: 1px solid #666666;
 }
 
-.text-readonly {
-	margin-left: 50px;
-}
-
-label {
-	margin-left: 80px;
-}
-
-.input-file-label {
-	margin-left: 50px;
+label:not(.input-file-label) {
+	margin-left: 20px;
 }
 
 .input-pw {
@@ -39,12 +27,16 @@ label {
 }
 
 .info {
-	display: grid;
-	grid-template-columns: 100px 1fr;
+	display: flex;
 	align-items: center;
-	gap: 10px;
+	gap: 10px 60px;
 	border-bottom: 1px solid #D8D8D8;
 	padding: 20px 20px;
+}
+
+.info.addr-wrap, .info.pw-wrap {
+	border-bottom: 0;
+	padding-bottom: 0;
 }
 
 .search-list-title:first-child {
@@ -61,34 +53,20 @@ label {
 }
 
 .error-message {
-	margin-left: 50px;
 	color: red;
 	font-size: 0.9em;
+	margin-top: 5px;
 	display: none;
 }
 
-.select-box {
-	display: flex;
-	align-items: center; /* 자식 요소들을 수직 중앙 정렬 */
-	position: relative; /* 필요 시 position relative 사용 */
-}
-
-.select-arrow-down {
-	margin-right: 5px; /* 선택 상자와 화살표 사이에 간격 추가 */
-}
-
 /* 특정 요소 스타일 */
-select#emailUser, select#deptName, select#emailDomain {
+select#emailUser, select#deptName, .select-wrap.emailDomain {
 	width: 150px;
 	margin-left: 20px;
 }
 
-select#countryNum {
-	width: 80px;
-}
-
-.input-file-label {
-	margin-right: 30px;
+.select-wrap.countryNum {
+	width: 70px;
 }
 
 .btn {
@@ -101,24 +79,6 @@ select#countryNum {
 
 .search-list-subject-symbol {
 	margin-left: 20px;
-}
-
-span.search-list-subject {
-	margin-left: 30px;
-}
-
-div#email.select-arrow-down, div#dept.select-arrow-down {
-	margin-left: 30px;
-}
-
-select#deptName {
-	margin-left: 50px;
-}
-
-#preview {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
 }
 
 .btn-box {
