--- a/src/main/resources/static/admin/notice/css/noticeReg.css
+++ b/src/main/resources/static/admin/notice/css/noticeReg.css
@@ -34,13 +34,14 @@
 	padding: 10px;
 	border: 1px solid #D8D8D8;
 	border-radius: 5px;
-	background-color: #fdfdfd;
+	background-color: #f8f8f8;
 	overflow-y: auto;
 }
 
 .editor:focus {
 	outline: none;
 	border: 1px solid #000000;
+	background-color: #fff;
 }
 
 .editor.dragover {
