--- a/src/main/resources/templates/admin/inquiries/inquiriesDetails.html
+++ b/src/main/resources/templates/admin/inquiries/inquiriesDetails.html
@@ -88,7 +88,7 @@
 	
 	
 		<form th:action="@{${status == '처리완료' ? '/admin/inquiries/update' : '/admin/inquiries/insert'}}" th:object="${inquiries}" method="POST">
-			<div class="white-frame answer-area">
+			<div class="answer-area">
 				<div class="text-group" style="border-bottom: none; padding: 0;">
 					<span class="search-list-subject">답변내용</span> 
 					
