--- a/src/main/resources/templates/admin/products/add-product.html
+++ b/src/main/resources/templates/admin/products/add-product.html
@@ -73,7 +73,7 @@
                     <input type="radio" name="book_country_type" id="overseas" value="02"/>
                     <label for="overseas">국외</label>
                 </div>
-                <div class="select-wrap">
+                <div class="select-wrap select-lists">
                 	<select id="national" class="select-lists" name="book_category">
 			            <option class="default" value="">선택해주세요</option>
 			            <option th:each="val : ${book_category}" th:if="${val.category_country_type == '01'}" 
