--- a/src/main/resources/templates/mobile/dispatch/dispatch.html
+++ b/src/main/resources/templates/mobile/dispatch/dispatch.html
@@ -7,11 +7,8 @@
     <link rel="stylesheet" href="/mobile/common/css/container-map.css" />
     <link rel="stylesheet" href="/mobile/dispatch/css/dispatch.css" />
     
-<div class="mobile-inner" style="gap: 2.3rem;"> 
-    <button class="back-btn" onclick="location.href='/mobile/admin/index'">
-        <i class="fa-solid fa-chevron-left"></i>
-        <p class="menu-title">출고하기</p>
-    </button>    
+<div class="mobile-inner" style="gap: 2.3rem;">
+    <h3 class="menu-title">출고하기</h3>
     <div class="white-frame home-first-menu">
         <div class="cnt" id="A-01" th:value="A-01">A01</div>
         <div class="cnt" id="A-02" th:value="A-02">A02</div>
@@ -33,9 +30,11 @@
 받아 서치한후 리스트 출력 (제목, isbn, 날짜, 수량(내가 입력할수있어야함 그러나 이미 들어있는 갯수를 넘어가면 안됨) 
 완료 버튼 누르면 출고 완료) -->
 	<form id="dispatchForm" action="/mobile/admin/dispatch-items" method="POST">
-        <div class="white-frame scroll" style="height: 25rem; margin-bottom: 3rem;">
+        <div class="white-frame" style="margin-bottom: 2.3rem;">
             <p class="sub-title"><span id="zone-num-display"></span></p>
-            <div id="dispatch-list"></div>
+            <div class="inner scroll" style="height: 21rem;">
+                <div id="dispatch-list"></div>
+            </div>
         </div>
         
         <button type="button" class="default-btn export" id="dispatchBtn" onclick="location.href='/mobile/admin/stockout-page'">
