--- a/src/main/resources/templates/mobile/home/delivery_detail.html
+++ b/src/main/resources/templates/mobile/home/delivery_detail.html
@@ -5,22 +5,24 @@
 	  layout:decorate="~{/mobile/common/layout/mobilelayout}"
 	  layout:fragment="Content">
 
-<div class="mobile-inner" style="gap: 23px;" onclick="location.href='/mobile/admin/index'">
-	<button class="back-btn menu-title">
+<div class="mobile-inner" style="gap: 23px;">
+	<button class="back-btn menu-title" onclick="location.href='/mobile/admin/index'">
 		<i class="fa-solid fa-chevron-left"></i>
 		배송요청내역
 	</button>
 
-	<div class="white-frame scroll" style="height: auto">
+	<div class="white-frame">
 		<p class="sub-title">요청번호:<span th:text="${requestNum}"></span></p>
-		<div class="content-list" style="grid-template-columns: 1fr 1fr; height: 8rem;" th:each="item : ${list}">
-			<div class="content-text-wrap">
-				<span class="content-text" th:text="'ISBN: ' + ${item.book_isbn}"></span>
-				<span class="content-text" th:text="'주문번호: ' + ${item.order_num}"></span>
-				<p class="content-sub-txt elipsis"><span th:text="'책제목:' + ${item.book_name}"></span></p>
-			</div>
-			<div style="text-align: end">
-				<p class="content-text"><span th:text="${item.order_detail_qty} + 권"></span></p>
+		<div class="inner">
+			<div class="content-list" style="grid-template-columns: 1fr 1fr; height: 8rem;" th:each="item : ${list}">
+				<div class="content-text-wrap">
+					<span class="content-text" th:text="'ISBN: ' + ${item.book_isbn}"></span>
+					<span class="content-text" th:text="'주문번호: ' + ${item.order_num}"></span>
+					<p class="content-sub-txt elipsis"><span th:text="'책제목:' + ${item.book_name}"></span></p>
+				</div>
+				<div style="text-align: end">
+					<p class="content-text"><span th:text="${item.order_detail_qty} + 권"></span></p>
+				</div>
 			</div>
 		</div>
 	</div>
