--- a/src/main/resources/templates/mobile/home/home.html
+++ b/src/main/resources/templates/mobile/home/home.html
@@ -35,22 +35,24 @@
 	    </div>
 	</div>
 	
-	<div class="white-frame scroll" style="height: 36rem">
+	<div class="white-frame scroll">
 		<p class="sub-title">배송요청</p>
-		<div class="content-list" th:each="item : ${list}">
-			<div class="content-text-wrap">
-				<a class="content-text" style="text-decoration: underline;" th:href="@{/mobile/admin/delivery-detail(requestNum=${item.request_num})}">요청번호: <span th:text="${item.request_num}"></span></a>
-				<p class="content-sub-txt">요청날짜: <span th:text="${#dates.format(item.request_date, 'yyyy-MM-dd')}"></span></p>
+		<div class="inner scroll" style="height: 36rem">
+			<div class="content-list" th:each="item : ${list}">
+				<div class="content-text-wrap">
+					<a class="content-text" style="text-decoration: underline;" th:href="@{/mobile/admin/delivery-detail(requestNum=${item.request_num})}">요청번호: <span th:text="${item.request_num}"></span></a>
+					<p class="content-sub-txt">요청날짜: <span th:text="${#dates.format(item.request_date, 'yyyy-MM-dd')}"></span></p>
+				</div>
+				<div style="text-align: end;">
+					<p class="content-text">총 <span th:text="${item.total_order_qty} + 권"></span></p>
+				</div>
 			</div>
-			<div style="text-align: end;">
-				<p class="content-text">총 <span th:text="${item.total_order_qty} + 권"></span></p>
+
+			<div id="page-area" class="page-area" th:if="${page != null}" th:data-current-page="${page.currentPage}" th:data-total-page="${page.totalPages}">
+				<i id="page-arrow-left" class="fa-solid fa-angle-left page-arrow"></i>
+				<span th:each="i : ${#numbers.sequence(page.startPage, page.endPage)}" th:id="'page-link-' + ${i}" class="page-link" th:text="${i}"></span>
+				<i id="page-arrow-right" class="fa-solid fa-angle-right page-arrow"></i>
 			</div>
-		</div>
-		
-		<div id="page-area" class="page-area" th:if="${page != null}" th:data-current-page="${page.currentPage}" th:data-total-page="${page.totalPages}">
-			<i id="page-arrow-left" class="fa-solid fa-angle-left page-arrow"></i>
-			<span th:each="i : ${#numbers.sequence(page.startPage, page.endPage)}" th:id="'page-link-' + ${i}" class="page-link" th:text="${i}"></span>
-			<i id="page-arrow-right" class="fa-solid fa-angle-right page-arrow"></i>
 		</div>
 	</div>
 	
