--- a/src/main/resources/templates/mobile/warehousing/warehousing.html
+++ b/src/main/resources/templates/mobile/warehousing/warehousing.html
@@ -7,22 +7,20 @@
     <link rel="stylesheet" href="/mobile/common/css/container-map.css" />
     <link rel="stylesheet" href="/mobile/dispatch/css/dispatch.css" />
     
-<div class="mobile-inner" style="gap: 2.3rem;"> 
-
-    <button class="back-btn" onclick="location.href='/mobile/admin/index'">
-        <i class="fa-solid fa-chevron-left"></i>
-        <p class="menu-title">입고하기</p>
-    </button>
-        
+<div class="mobile-inner" style="gap: 2.3rem;">
+    <h3 class="menu-title">입고하기</h3>
     <div class="white-frame home-first-menu">
         <div th:each="item : ${menuItems}" class="cnt" th:id="${item}" th:value="${item}" th:text="${item}"></div>
     </div>
 
-    <div class="white-frame scroll" style="height: 25rem">
+    <div class="white-frame">
 		    <p class="sub-title"><span id="zone-num-display"></span></p>
-		    <div id="dispatch-list"></div>
+        <div class="inner scroll" style="height: 21rem">
+            <div id="dispatch-list"></div>
+        </div>
     </div>
-    
+
+
     <button id="export-btn" class="default-btn export">
 	    <svg data-slot="icon" fill="none" stroke-width="2" stroke="currentColor" viewBox="-8 -8 40 40"
 	         xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
