Design: 모바일 css 수정

--- a/src/main/resources/templates/mobile/home/delivery_status.html
+++ b/src/main/resources/templates/mobile/home/delivery_status.html
@@ -27,7 +27,7 @@
     <h3 class="menu-title">배송상황</h3>
 
     <div class="white-frame">
-        <div class="inner scroll" style="height: 70rem;">
+        <div class="inner" style="height: auto;">
             <div class="content-list deliver-state" th:each="item : ${list}">
                 <div class="content-text-wrap top">
                     <div class="deliver-info">
