--- a/src/main/resources/templates/mobile/home/home.html
+++ b/src/main/resources/templates/mobile/home/home.html
@@ -35,9 +35,9 @@
 	    </div>
 	</div>
 	
-	<div class="white-frame scroll">
+	<div class="white-frame">
 		<p class="sub-title">배송요청</p>
-		<div class="inner scroll" style="height: 36rem">
+		<div class="inner" style="height: auto">
 			<div class="content-list" th:each="item : ${list}">
 				<div class="content-text-wrap">
 					<a class="content-text" style="text-decoration: underline;" th:href="@{/mobile/admin/delivery-detail(requestNum=${item.request_num})}">요청번호: <span th:text="${item.request_num}"></span></a>
