Design: 마이페이지의 사이드메뉴  수정

--- a/src/main/resources/templates/user/common/layout/myPageLayout.html
+++ b/src/main/resources/templates/user/common/layout/myPageLayout.html
@@ -15,7 +15,7 @@
                     <img src="" alt="" class="user-img"/>
 <!--                    <i class="fa-solid fa-circle-user"></i>-->
                 </div>
-                <p class="user-name">[[${session.member.member_name}]]</p>
+                <p class="user-name" th:text="${session.member != null ? session.member.member_name : '게스트'}"></p>
             </div>
             <ul class="menu-list">
                 <li class="menu-item">
