--- a/src/main/resources/static/user/registration/css/registration.css
+++ b/src/main/resources/static/user/registration/css/registration.css
@@ -1,9 +1,11 @@
 .mainlogo {
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 h3:not(.terms-title) {
     width: 100%;
+    font-size: 18px;
+    font-weight: 600;
     padding-bottom: 20px;
     margin-bottom: 20px;
     border-bottom: 1px solid #c0c0c0;
@@ -182,7 +184,7 @@ form {
     width: 100%;                
     font-size: 12px;
     color: red;
-    margin-left: 35px;
+    margin-left: 55px;
 }
 
 span {
@@ -297,6 +299,7 @@ input.nomal, .form-item.nomal::before {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.48);
+    z-index: 1000;
 }
 
 #terms-modal.on {
@@ -305,20 +308,24 @@ input.nomal, .form-item.nomal::before {
 
 .terms-modal-content {
     width: 400px;
-    height: 500px;
     margin: 15% auto;
     background-color: #fff;
     border: 1px solid #c0c0c0;
     border-radius: 10px;
+    padding: 20px 10px 20px 20px;
+}
+
+.terms-inner {
+    height: 500px;
     overflow: auto;
-    padding: 20px;
+    padding-right: 10px;
 }
 
 /* 스크롤바 커스텀 */
-.terms-modal-content::-webkit-scrollbar {
+.terms-inner::-webkit-scrollbar {
     width: 8px; /* 스크롤바 너비 */
 }
-.terms-modal-content::-webkit-scrollbar-track { /* 스크롤 바 배경 */
+.terms-inner::-webkit-scrollbar-track { /* 스크롤 바 배경 */
     height: 10%;
     background-color: transparent; /*스크롤 바 배경 색상*/
     border-left: 3px solid transparent;
@@ -326,7 +333,7 @@ input.nomal, .form-item.nomal::before {
     background-clip: content-box;
 }
 
-.terms-modal-content::-webkit-scrollbar-thumb {  /* 스크롤바 막대 */
+.terms-inner::-webkit-scrollbar-thumb {  /* 스크롤바 막대 */
     height: 20%;
     background-clip: padding-box;
     border: 2px solid transparent; /*스크롤 바 양옆 여백*/
