--- a/src/main/resources/templates/admin/warehouse/warehouse.html
+++ b/src/main/resources/templates/admin/warehouse/warehouse.html
@@ -15,24 +15,26 @@
 	<div class="filter-container white-frame">
 		<h3 class="search-list-title">창고재고조회</h3>
 		<div class="filter-info">
-			<p class="search-list-subject">발주일</p>
+			<p class="search-list-subject">입고일</p>
 			<div class="filter-wrap date-filter">				
 				<div class="date-picker">
 					<div class="input-date-box">
-						<input type="text" id="startDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
-						<i class="fa-solid fa-calendar-days"></i>
+						<input type="text" id="startDate" class="placeholder startDate"
+							placeholder="YYYY-MM-DD" />
+							<i class="fa-solid fa-calendar-days"></i>
 					</div>
-					<div class="calendar-slash">-</div>						
+					<div class="calendar-slash">-</div>
 					<div class="input-date-box">
-						<input type="text" id="endDate" class="placeholder" placeholder="YYYY-MM-DD" /> 
+						<input type="text" id="endDate" class="placeholder endDate"
+							placeholder="YYYY-MM-DD" />
 						<i class="fa-solid fa-calendar-days"></i>
 					</div>
-				</div>					
-				<div class="date-options date-pick-btn">
-					<button class="date-option today today-btn date-btn" onclick="setToday()">오늘</button>
-					<button class="date-option week-btn date-btn" onclick="setDateRange(7)">1주일</button>
-					<button class="date-option month-btn date-btn" onclick="setDateRange(30)">1개월</button>
-					<button class="date-option year-btn date-btn" onclick="setDateRange(365)">1년</button>
+				</div>
+				<div class="date-pick-btn">
+					<button class="today-btn date-btn" onclick="setDateOption(0, this)">오늘</button>
+					<button class="week-btn date-btn" onclick="setDateOption(7, this)">1주일</button>
+					<button class="month-btn date-btn" onclick="setDateOption(30, this)">1개월</button>
+					<button class="year-btn date-btn" onclick="setDateOption(365, this)">1년</button>
 				</div>
 			</div>
 		</div>
