--- a/src/main/resources/templates/admin/inventory_log/inventoryLogDetail.html
+++ b/src/main/resources/templates/admin/inventory_log/inventoryLogDetail.html
@@ -65,7 +65,6 @@
 		</div>
 	</div>
 	
-	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-	<script src="/admin/inventory_log/js/detail.js"></script>
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </div>
 </html>
