--- a/src/main/resources/templates/admin/supplier_orders/supplierDetail.html
+++ b/src/main/resources/templates/admin/supplier_orders/supplierDetail.html
@@ -5,7 +5,7 @@
       layout:decorate="~{/admin/common/layout/defaultlayout}"
       layout:fragment="Content">
 
-<link rel="stylesheet" href="/admin/supplier_orders/css/detail.css">
+	<link rel="stylesheet" href="/admin/supplier_orders/css/detail.css">
 <div>
     <button class="back-btn" onclick="location.href='/admin/supplierOrders/list'">
         <i class="fa-solid fa-chevron-left"></i>
@@ -79,7 +79,6 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </div>
 </html>
