Design: 어드민, 모바일, 사용자 페이지 css 일부수정

--- a/src/main/resources/static/admin/products/css/edit-product.css
+++ b/src/main/resources/static/admin/products/css/edit-product.css
@@ -86,6 +86,7 @@ input[type=text]:not(.placeholder, .search-input, .input-price) {
     font-size: 16px;
     resize: none;
     background-color: #f8f8f8;
+    font-family: 'SUIT', sans-serif;
 }
 
 .custom-textarea:focus {
