--- a/src/main/resources/templates/mobile/common/fragments/config.html
+++ b/src/main/resources/templates/mobile/common/fragments/config.html
@@ -5,12 +5,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>WHALEBOOKS 모바일</title>
+	<title>WHALE BOOKS 모바일</title>
 
 	<link rel="stylesheet" href="/mobile/common/css/reset.css"/>
 	<link rel="stylesheet" href="/mobile/common/css/common.css"/>
 	<link rel="stylesheet" href="/user/common/css/pagination.css" />
 	<link rel="stylesheet" href="/mobile/common/css/modal.css">
+
+	<link rel="shortcut icon" th:href="@{/admin/common/img/favicon.ico}" type="image/x-icon">
+	<link rel="icon" th:href="@{/admin/common/img/favicon.ico}" type="image/x-icon">
 
 	<!-- 폰트어썸 -->
 	<script src="https://kit.fontawesome.com/302ba19bbe.js" crossorigin="anonymous"></script>
