--- a/src/main/resources/templates/user/mypage/member_del/memberDelDetail.html
+++ b/src/main/resources/templates/user/mypage/member_del/memberDelDetail.html
@@ -59,11 +59,15 @@
 	<div class="info-box">
 		<div class="radio-group" style="margin-bottom: 20px;">
 			<input type="checkbox" class="check-box" id="check-btn1">
-			<label for="check-btn1"></label>회원탈퇴 안내사항을 확인했으며 탈퇴에 동의합니다.<span class="green">(필수)</span>
+			<label for="check-btn1"></label>
+			<label for="check-btn1">회원탈퇴 안내사항을 확인했으며 탈퇴에 동의합니다.</label>
+			<span class="green">(필수)</span>
 		</div>
 		<div class="radio-group">
 			<input type="checkbox" class="check-box" id="check-btn2">
-			<label for="check-btn2"></label>모든 금권 혜택 자동 소멸에 동의합니다.<span class="green">(필수)</span>
+			<label for="check-btn2"></label>
+			<label for="check-btn2">모든 금권 혜택 자동 소멸에 동의합니다.</label>
+			<span class="green">(필수)</span>
 		</div>
 	</div>
 	<div class="btn-box">
