--- a/src/main/resources/static/user/mypage/inquiries/css/inquiriesReg.css
+++ b/src/main/resources/static/user/mypage/inquiries/css/inquiriesReg.css
@@ -1,27 +1,27 @@
 .inquiries-container {
-	border-top: 1px solid #000000;
-	padding: 20px 0px 20px 0px;
-	border-bottom: 1px solid #DFDFDF;
+    border-top: 1px solid #000000;
+    padding: 20px 0px 20px 0px;
+    border-bottom: 1px solid #DFDFDF;
 }
 
 
 .input-full {
-	width: 100%;
-	height: 40px;
-	border: 1px solid #C0C0C0;
+    width: 100%;
+    height: 40px;
+    border: 1px solid #C0C0C0;
     border-radius: 5px;
     padding: 10px;
     font-size: 16px;
 }
 
 .two-column-grid {
-	display: grid; 
-	grid-template-columns: 100px 1fr;
+    display: grid;
+    grid-template-columns: 100px 1fr;
 }
 
 .flex-column {
-	display: flex; 
-	flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 textarea:focus,
@@ -30,23 +30,26 @@ select:focus {
     border: 1px solid #2D2D2D;
 }
 .btn-custom {
-	width: 120px; 
-	border-radius: 5px;
+    width: 120px;
+    border-radius: 5px;
 }
+
 .flex-center {
-	display: flex; 
-	align-items: center;
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
+
 .between {
-	justify-content: space-between;
+    justify-content: space-between;
 }
 
 .email-container {
-	display: grid; 
-	grid-template-columns: 100px 1fr;
-	gap: 18px; 
-	border-bottom: 1px solid #DFDFDF; 
-	padding: 20px 0px 20px 0px
+    display: grid;
+    grid-template-columns: 100px 1fr;
+    gap: 18px;
+    border-bottom: 1px solid #DFDFDF;
+    padding: 20px 0px 20px 0px
 }
 
 .textarea-container {
@@ -56,9 +59,9 @@ select:focus {
 }
 
 .textarea-container textarea {
-	position: relative;
-	width: 100%;
-	border: 1px solid #C0C0C0;
+    position: relative;
+    width: 100%;
+    border: 1px solid #C0C0C0;
     border-radius: 5px;
     padding: 10px;
     font-size: 16px;
@@ -67,23 +70,23 @@ select:focus {
 }
 
 .grey {
-	color: #7E7E7E;
+    color: #7E7E7E;
 }
 
 .sub-title-font {
-	font-size: 14px;
-	font-weight: 700;
-	line-height: 2;	
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 2;
 }
 
 .char-count {
-	position: absolute;
-	bottom: 17px;
-	right: 0;
+    position: absolute;
+    bottom: 17px;
+    right: 0;
 }
 
 .char-count span {
-	display: inline-block;
+    display: inline-block;
 }
 
 .image-upload-container {
@@ -97,7 +100,7 @@ select:focus {
 }
 
 .middle {
-	width: 180px;
+    width: 180px;
 }
 
 .image-upload-label {
@@ -116,11 +119,12 @@ select:focus {
 }
 
 .inquiry-modal-content {
-	display: flex;
+    display: flex;
     flex-direction: column;
+    gap: 20px;
     background-color: #fefefe;
     margin: 10% auto;
-    border: 0.5px solid #888;
+    border: 0.5px solid #666;
     padding: 20px;
     width: 500px;
     min-height: 500px;
@@ -150,9 +154,8 @@ select:focus {
 }
 
 .inquiry-modal-text {
-	margin-bottom: 20px;
-	font-size: 20px;
-	font-weight: 700;
+    font-size: 20px;
+    font-weight: 700;
     display: flex;
     align-items: center;
     line-height: 30px;
@@ -161,37 +164,62 @@ select:focus {
     justify-content: space-between;
 }
 
+.order-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 .order-item {
-	border: 1px solid #C0C0C0;
+    border: 1px solid #C0C0C0;
     padding: 20px;
     display: flex;
     gap: 5px;
-    margin: 5px 0px 5px 0px;
+    /*margin: 0 0 5px;*/
     border-radius: 10px;
     flex-direction: column;
 }
+
+.order-item.on {
+    border-bottom: 0;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.order-details.off {
+    display: none;
+}
+
 .order-details {
-	display: flex;
-    flex-direction: column;
-    border-top: 1px solid #C0C0C0;
-    padding-top: 5px;
-    gap: 5px;
+    display: block;
+    border: 1px solid #C0C0C0;
+    padding: 20px;
+    border-radius: 0 0 10px 10px;
+    margin-top: -10px;
+}
+
+.order-details > .flex-center {
+    margin-bottom: 10px;
+}
+
+.order-details > .flex-center:last-child {
+    margin-bottom: 0;
 }
 
 .btn-spacebetween {
-	margin: 0 10px;
-	color: #C0C0C0;
+    margin: 0 10px;
+    color: #C0C0C0;
 }
 
 .cancel-btn-img {
-	width: 18px;
-	height: 18px;
-	background-color: #FFFFFF;
-	background-image: url(/user/common/imgs/cancel.png);
-	background-size: cover;
-	background-position: center;
-	border: none;
-	cursor: pointer;
+    width: 18px;
+    height: 18px;
+    background-color: #FFFFFF;
+    background-image: url(/user/common/imgs/cancel.png);
+    background-size: cover;
+    background-position: center;
+    border: none;
+    cursor: pointer;
 }
 
 .custom-modal-footer {
@@ -208,31 +236,30 @@ select:focus {
     border: 1px solid #845EC2;
     border-radius: 5px;
     background-color: #845EC2;
-    margin-top: 15px;
 }
 
 .order-summary {
-	display: flex; 
-	align-items: center;
-	margin: 15px 0 20px 0;
-	gap: 20px;
+    display: flex;
+    align-items: center;
+    margin: 15px 0 20px 0;
+    gap: 20px;
 }
 
 .order-span {
-	border: 1px solid #C0C0C0;
+    border: 1px solid #C0C0C0;
     border-radius: 5px;
     padding: 10px;
     font-size: 14px;
-	
+
 }
 
 #preview {
-	max-width: 100%;
-	max-height: 100%;
-	display: none;
-	position: absolute;
-	top: 0;
-	left: 10;
+    max-width: 100%;
+    max-height: 100%;
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 10;
 }
 
 .input-box-long {
