--- a/src/main/resources/templates/mobile/login/login.html
+++ b/src/main/resources/templates/mobile/login/login.html
@@ -2,10 +2,13 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>모바일 로그인 화면</title>
+<title>WHALE BOOKS 모바일</title>
     <link rel="stylesheet" href="/mobile/common/css/reset.css" />
     <link rel="stylesheet" href="/mobile/login/css/login.css" />
     <link rel="stylesheet" href="/mobile/common/css/common.css" />
+
+    <link rel="shortcut icon" th:href="@{/admin/common/img/favicon.ico}" type="image/x-icon">
+    <link rel="icon" th:href="@{/admin/common/img/favicon.ico}" type="image/x-icon">
 
 </head>
 <body>
