--- a/src/main/resources/templates/user/mypage/notices/notices.html
+++ b/src/main/resources/templates/user/mypage/notices/notices.html
@@ -16,15 +16,16 @@
 	        <input type="text" class="input-long" placeholder="검색할 제목을 입력해 주세요." />  
 	        <button class="default-btn">검색</button>
 	    </div>
-	    <div id="notice-qty" class="notice-qty"></div>
-    	<div class="notice-header">
-		    <span class="header-no">NO</span>
-		    <span class="header-title">공지제목</span>
-		    <span class="header-date">날짜</span>
+		<div class="notice-wrap">
+			<div id="notice-qty" class="notice-qty"></div>
+			<div class="notice-header">
+				<span class="header-no">NO</span>
+				<span class="header-title">공지제목</span>
+				<span class="header-date">날짜</span>
+			</div>
+			<ul id="notices-list"></ul>
 		</div>
-	    
-	    
-	    <ul id="notices-list"></ul>
+
 	</div>
 	<div id="page-area" class="page-area"></div>
 		
