--- a/src/main/resources/templates/user/members/findPw-modifyPw.html
+++ b/src/main/resources/templates/user/members/findPw-modifyPw.html
@@ -30,6 +30,7 @@
 					<input type="password" id="confirm-pw" placeholder="새로운 비밀번호를 한 번 더 입력해 주세요." />
 				</div>	
 			</div>
+			<div class="password-modify-comment">⚠비밀번호 : 특수문자, 영문자, 숫자 포함, 최소 8자</div>
 	        
 	
 	        <!-- 비밀번호 찾기, 로그인 버튼 -->
