Design: 모바일페이지에서 출고 시 해당 주문들 3일 후 배송완료 처리 되게끔 수정

--- a/src/main/resources/templates/user/main/customer_order/cart.html
+++ b/src/main/resources/templates/user/main/customer_order/cart.html
@@ -26,7 +26,7 @@
 					<div class="check-btn">
 						<input type="checkbox" id="select-all" class="check-box"> <label for=""></label>
 					</div>
-					<div class="table-column product-info">상품정보</div>
+					<div class="table-column info">상품정보</div>
 					<div class="table-column price-qty">주문금액/수량</div>
 					<div class="table-column delivery-date">배송일정</div>
 				</div>
