Fix: 사용자 페이지의 신상품 검색 페이지 오류 수정

--- a/src/main/resources/templates/user/main/products/searchForm.html
+++ b/src/main/resources/templates/user/main/products/searchForm.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-        <div class="re-search-bar">
+        <div class="re-search-bar" th:if="${condition.categoryCountryType != 03 and condition.categoryCountryType != 04}">
             <input type="text" name="word" id="word" class="re-search-input" placeholder="결과 내 재검색" th:value="${condition.word}">
             <i class="fa-solid fa-magnifying-glass" aria-hidden="true"></i>
         </div>
